--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -462,14 +462,7 @@ $warning-unicorn : $mat-lime;
     border-radius: 3px;
     padding: 4px 16px;
   	margin: 0 0 20px;
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-    -ms-word-break: break-word;
-    word-break: break-word;
-    -ms-hyphens: manual;
-    -moz-hyphens: manual;
-    -webkit-hyphens: manual;
-    hyphens: manual;
+
   }
   .table-container {
   	position: relative;
